implemented next page button

--- a/index.html
+++ b/index.html
@@ -14,11 +14,13 @@
         <input type="submit" value="Go" />
     </form>
     <ul class='results'></ul>
-
+    <br>
+    <button class='nextPageButton'>See next Page</button>
     <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
     <script src="scripts/store.js"></script>
     <script src="scripts/api.js"></script>
     <script src="scripts/videoList.js"></script>
+    <script src="scripts/nextPage.js"></script>
     <script src="scripts/index.js"></script>
 </body>
 </html>
