implement css and previous page button

--- a/index.html
+++ b/index.html
@@ -11,11 +11,12 @@
     <h1>Youtube Api</h1>
     <form class="submitClass">
         <input type="text" id="search-term" />
-        <input type="submit" value="Go" />
+        <button type="submit" value="Go" >Go</button> 
     </form>
     <ul class='results'></ul>
     <br>
-    <button class='nextPageButton'>See next Page</button>
+    <button class='previousPageButton page-button'>Previous Page</button>
+    <button class='nextPageButton page-button'>Next Page</button>
     <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
     <script src="scripts/store.js"></script>
     <script src="scripts/api.js"></script>
