add a bit more css

--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@
 <body>
     <h1>Youtube Api</h1>
     <form class="submitClass">
-        <input type="text" id="search-term" />
-        <button type="submit" value="Go" >Go</button> 
+        <input type="text" id="search-term" placeholder='Search for a video...' />
+        <br>
+        <br>
+        <button type="submit" value="Go">Go</button> 
     </form>
     <ul class='results'></ul>
     <br>
