--- a/index.html
+++ b/index.html
@@ -15,12 +15,13 @@
     </form>
     <ul class='results'></ul>
     <br>
-    <button class='nextPageButton'>See next Page</button>
+    <button class='button prevPageButton'> << Prev </button>
+    <button class='button nextPageButton'> Next >> </button>
+
     <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
     <script src="scripts/store.js"></script>
     <script src="scripts/api.js"></script>
     <script src="scripts/videoList.js"></script>
-    <script src="scripts/nextPage.js"></script>
     <script src="scripts/index.js"></script>
 </body>
 </html>
