--- a/index.html
+++ b/index.html
@@ -8,11 +8,12 @@
     <title>Youtube Api</title>
 </head>
 <body>
-    <h1>Youtube Api</h1>
-    <form class="submitClass">
+    <h1 class="home">Youtube Api</h1>
+    <form class="home submitClass">
         <input type="text" id="search-term" />
         <input type="submit" value="Go" />
     </form>
+    <br>
     <ul class='results'></ul>
     <br>
     <button class='button prevPageButton'> << Prev </button>
